# ibis-source-analysis

./: convert_civet_to_freesurfer.py  pyproject.toml  source_estimation_nrrd.py
scripts/: _02_get_BEM_surfaces.py  _04_align.py  convert_obj_to_fs.py  foo.py
