[project]
name = "smri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mne>=1.11.0",
    "nibabel>=5.3.2",
    "numpy>=2.2.6",
    "pynrrd>=1.1.3",
    "pyvista>=0.47.0",
    "scipy>=1.15.3",
    "tfce-mediation",
    "vtk>=9.5.2",
]

[tool.uv.sources]
tfce-mediation = { path = "../repos/TFCE_mediation", editable = true }
